--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           sudo apt-get update
           sudo apt install python3-tk python3-dev python3-setuptools tcl
           
-      - name: Install tk on ubuntu
+      - name: Install pywin32
         if: ${{ matrix.config.os == 'windows-2019'}}
         run: pip install pywin32
 
