--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,8 @@ name: Create Release
 
 on:
   push:
-
+    tags:
+      - '*'
 
 jobs:
   build:
@@ -13,7 +14,7 @@ jobs:
       matrix:
         config:
           - os: ubuntu-22.04
-          - os: macos-latest
+          # - os: macos-latest
           - os: windows-2019
     steps:
       - name: Install tk on ubuntu
@@ -69,8 +70,8 @@ jobs:
       - name: Zip file ubuntu
         run: zip -r APAM_ubuntu.zip dist-ubuntu-*
 
-      - name: Zip file macos
-        run: zip -r APAM_macos.zip dist-macos-*
+      # - name: Zip file macos
+      #   run: zip -r APAM_macos.zip dist-macos-*
 
       - name: Create Release
         id: create_release
@@ -84,4 +85,4 @@ jobs:
           files: |
             APAM_windows.zip
             APAM_ubuntu.zip
-            APAM_macos.zip
+          # APAM_macos.zip
