--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
           pip install pillow
 
       - name: Build with pyinstaller for ${{ matrix.config.os }}
-        run: pyinstaller tela_sistema_cadastro_apam/main.spac --onefile --noconsole --icon=assets/logo.png --name=APAM
+        run: pyinstaller tela_sistema_cadastro_apam/main.py --onefile --noconsole --icon=assets/logo.png --name=APAM
 
       - name: Rename builded app
         run: mv ./dist ./dist-${{ matrix.config.os }}
